--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,36 @@
 </head>
 
 <body>
-    <div>
-        Testing
-        <button id="increment">+1</button> 
+    <div class="container">
+        <div id="messages">
+
+        </div>
     </div>
+    <div class="container">
+        <form class="form-group mt-3" id="chat">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" placeholder="Type Your Message Here...." class="form-control"></textarea>
+            <button type="submit" class="btn btn-success mt-3" id="send">Send</button>
+        </form>
+        <button class="btn btn-info" id="location">Send Location</button>
+    </div>
+    <script id="message-template" type="text/html">
+        <div class="container mt-2">
+            <div class="card border-success">
+                <div class="card-header mt-2">{{message}}</div>
+            </div>
+        </div>
+    </script>
+
+    <script id="location-template" type="text/html">
+        <div class="container mt-2">
+            <div class="card border-success">
+                <div class="card-header mt-2">
+                    <p>{{message}} <a target="_blank" href="{{location}}">{{location}}</a></p>
+                </div>
+            </div>
+        </div>
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -28,6 +54,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
