--- a/public/index.html
+++ b/public/index.html
@@ -6,53 +6,56 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <div class="container">
-        <div id="messages">
+
+    <div class="chat">
+        <div class="chat__sidebar">
 
         </div>
-    </div>
-    <div class="container">
-        <form class="form-group mt-3" id="chat">
-            <label for="message">Message</label>
-            <textarea name="message" id="message" placeholder="Type Your Message Here...." class="form-control"></textarea>
-            <button type="submit" class="btn btn-success mt-3" id="send">Send</button>
-        </form>
-        <button class="btn btn-info" id="location">Send Location</button>
-    </div>
-    <script id="message-template" type="text/html">
-        <div class="container mt-2">
-            <div class="card border-success">
-                <div class="card-header mt-2">{{message}}</div>
+        <div class="chat__main">
+            <div class="chat__messages" id="messages">
+
             </div>
+        </div>
+    </div>
+    <div class="compose">
+        <form id="chat">
+            <input type="text" id="message">
+            <button id="send">Send</button>
+        </form>
+        <button id="location">Location</button>
+    </div>
+
+
+    <script id="message-template" type="text/html">
+        <div class="message">
+            <p>
+                <span class="message__name">Binu</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p>
+                {{message}}
+            </p>
+            <hr>
         </div>
     </script>
 
     <script id="location-template" type="text/html">
-        <div class="container mt-2">
-            <div class="card border-success">
-                <div class="card-header mt-2">
-                    <p>{{message}} <a target="_blank" href="{{location}}">{{location}}</a></p>
-                </div>
-            </div>
+        <div class="message">
+            <p>
+                <span class="message__name">Binu</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p><a target="_blank" href="{{location}}">My current Location</a></p>
+            <hr>
         </div>
     </script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
