--- a/public/index.html
+++ b/public/index.html
@@ -11,57 +11,18 @@
 </head>
 
 <body>
-
-    <div class="chat">
-        <div class="chat__sidebar">
-
-        </div>
-        <div class="chat__main">
-            <div class="chat__messages" id="messages">
-
-            </div>
+    <div class="centered-form">
+        <div class="centered-form__box">
+            <h1 class="text-center">Join</h1>
+            <form action="/chat.html">
+                <label for="name">Display Name</label>
+                <input type="text" id="name" name="username" placeholder="Display Name" required>
+                <label for="roomname">Room</label>
+                <input type="text" id="roomname" name="room" placeholder="Room" required>
+                <button id="join">Join</button>
+            </form>
         </div>
     </div>
-    <div class="compose">
-        <form id="chat">
-            <input type="text" id="message">
-            <button id="send">Send</button>
-        </form>
-        <button id="location">Location</button>
-    </div>
-
-
-    <script id="message-template" type="text/html">
-        <div class="message">
-            <p>
-                <span class="message__name">Binu</span>
-                <span class="message__meta">{{createdAt}}</span>
-            </p>
-            <p>
-                {{message}}
-            </p>
-            <hr>
-        </div>
-    </script>
-
-    <script id="location-template" type="text/html">
-        <div class="message">
-            <p>
-                <span class="message__name">Binu</span>
-                <span class="message__meta">{{createdAt}}</span>
-            </p>
-            <p><a target="_blank" href="{{location}}">My current Location</a></p>
-            <hr>
-        </div>
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
 </body>
 
 </html>
