--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Chat Me</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 </head>
@@ -19,7 +20,7 @@
                 <input type="text" id="name" name="username" placeholder="Display Name" required>
                 <label for="roomname">Room</label>
                 <input type="text" id="roomname" name="room" placeholder="Room" required>
-                <button id="join">Join</button>
+                <button id="join">Join <i class="fa fa-sign-in" aria-hidden="true"></i></button>
             </form>
         </div>
     </div>
